[package]
name = "broker"
version = "3.1.2"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["sse", "api", "zero-code", "broker", "real-time"]
description = "Real-time Zero-Code API Server"
repository = "https://github.com/apibillme/broker"
homepage = "https://apibill.me"
readme = "README.md"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
json = "0.12"
pretty_env_logger = "0.3"
crossbeam = "0.7"
quic-p2p = "0.3"
bytes = "0.5"
rand = "0.7"
rustyline = "6"
unwrap = "1.2"
structopt = "0.3"
